public/styles/tweets.css
article {
  border: 4px solid;
  padding: 20px;
  margin-bottom: 30px;
}

article header {
  color: #9AA8DA;
}

.avatar {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.avatar p {
  white-space: nowrap;
}

.avatar img {
  width: 50px;
  height: auto;
  margin: 12px;
  margin-left: 0%;
}

.tweet-text {
  margin-top: 0px;
  padding: 0% 3% 0% 3%;
  word-wrap: break-word;
}

article hr {
  display: flex;
  align-self: center;
  border-top: solid 4px;
  margin-bottom: 0px;
}

article header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0% 3% 0% 3%;
}

article footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: medium;
  padding: 0% 3% 0% 3%;
}

.icons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  color: #4056A1;
}

.icons .icon {
  padding: 7%;
}

article:hover {
  box-shadow: 7px 7px #9AA8DA;
}

article:hover .name {
  font-weight: bold;
}

.icon:hover {
  color: darkorange;
}

.name:hover {
  font-weight: bold;
}

